<?xml version="1.0"?>
<package format="2">
  <name>ur10_robotiq_2f_140_description</name>
  <version>0.1.0</version>
  <description>A package that defines a urdf description for a UR10 robot with a Robotiq 2f 140 gripper.</description>

  <maintainer email="philipp.badenhoop@hellocodeblog.com">Philipp Badenhoop</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>xacro</run_depend>

</package>
