<?xml version="1.0"?>
<package format="2">
  <name>ur10_robotiq_2f_140_gazebo</name>
  <version>0.1.0</version>
  <description>A package that sets up a UR10 robot with a Robotiq 2f 140 gripper to run be simulated in gazebo.</description>

  <maintainer email="philipp.badenhoop@hellocodeblog.com">Philipp Badenhoop</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

</package>
